--- a/src/main/resources/templates/Email/verification-email.html
+++ b/src/main/resources/templates/Email/verification-email.html
@@ -22,7 +22,12 @@
         <p>Hello <span th:text="${name}">User</span>,</p>
         <p>Thank you for registering with LightPay. Please use the following verification code to complete your registration:</p>
 
-        <div class="token" th:text="${token}">123456</div>
+        <div class="token">
+            <a th:href="@{'https://lytxtreme.online/verify?code=' + ${token}}"
+               style="text-decoration: none; color: #007bff; font-weight: bold; font-size: 24px;">
+                <span th:text="${token}">123456</span>
+            </a>
+        </div>
 
         <p>This code will expire in 15 minutes.</p>
         <p>If you didn't request this verification, please ignore this email.</p>
